🔧 chore(api-docs): Добавлена документация к методам апи через next-openapi-gen
