# src/app/api/testt/route.ts
@@ -1,16 +1,0 @@
-import { z } from "zod";
-
-export const TesttResponseSchema = z.object({
-  ok: z.literal(true),
-});
-
-export type TesttResponse = z.infer<typeof TesttResponseSchema>;
-
-/**
- * @openapi
- * @summary Test endpoint
- * @response 200 TesttResponseSchema
- */
-export const GET = async () => {
-  return Response.json({ ok: true });
-};
